--- a/src/main/resources/Project/StorageWindow.fxml
+++ b/src/main/resources/Project/StorageWindow.fxml
@@ -10,9 +10,9 @@
     <Button fx:id="exitStorageButton" layoutX="205.0" layoutY="419.0" onAction="#exitStorage" text="Exit" />
     <TableView fx:id="tableView" layoutX="26.0" layoutY="14.0">
         <columns>
-            <TableColumn fx:id="colName" maxWidth="100.0" prefWidth="80" text="Name" />
-            <TableColumn fx:id="colAmount" maxWidth="80.0" prefWidth="80" text="Amount" />
-            <TableColumn fx:id="colCost" maxWidth="80.0" prefWidth="80" text="Cost" />
+            <TableColumn fx:id="colName" maxWidth="100.0" text="Name" />
+            <TableColumn fx:id="colAmount" maxWidth="80.0" text="Amount" />
+            <TableColumn fx:id="colCost" maxWidth="80.0" text="Cost" />
             <TableColumn fx:id="colDate" maxWidth="160" prefWidth="160.0" text="Expiration/service date" />
         </columns>
     </TableView>
