Added Doctor Handling Functionality

--- a/src/main/resources/Project/DeletionWindow.fxml
+++ b/src/main/resources/Project/DeletionWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<Pane xmlns:fx="http://javafx.com/fxml" fx:controller="Project.SupplyDeletionController">
+<Pane xmlns:fx="http://javafx.com/fxml" fx:controller="Project.supply.SupplyDeletionController">
 <padding><Insets top="15" right="25" bottom="15" left="25"/></padding>
     <Label text="Supply key:" layoutX="60" layoutY="15"/>
     <TextField fx:id="textFieldKey" promptText="Enter supply key" layoutX="25" layoutY="40"/>
