--- a/src/main/resources/Project/MedicineWindow.fxml
+++ b/src/main/resources/Project/MedicineWindow.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.MedicineController">
+<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.medicine.MedicineController">
     <padding><Insets bottom="15" left="25" right="25" top="15" /></padding>
     <Label layoutX="77.0" layoutY="30" text="Name:" />
 
