--- a/src/main/resources/Project/EquipmentWindow.fxml
+++ b/src/main/resources/Project/EquipmentWindow.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.Pane?>
-<Pane fx:controller="Project.EquipmentController"
+<Pane fx:controller="Project.equipment.EquipmentController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets top="15" right="25" bottom="15" left="25"/></padding>
     <Label text="Name:" layoutX="51" layoutY="30"/>
