--- a/src/main/resources/Project/MainWindow.fxml
+++ b/src/main/resources/Project/MainWindow.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.Pane?>
+
 <Pane fx:controller="Project.MainController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets top="15" right="25" bottom="15" left="25"/></padding>
 
+    <Label text="Materials and Equipment:" layoutX="45" layoutY="20"/>
+
     <Button fx:id="showAddMaterialMenu" text="Add material" layoutX="45" layoutY="60"
                   onAction="#handleShowFieldsMaterials"/>
 
-    <Button fx:id="showAddEquipmentMenu" text="Add equipment" layoutX="40" layoutY="110"
+    <Button fx:id="showAddEquipmentMenu" text="Add equipment" layoutX="45" layoutY="110"
             onAction="#handleShowFieldsEquipment"/>
 
     <Button fx:id="showAddMedicineMenu" text="Add medicine" layoutX="45" layoutY="160"
@@ -24,4 +28,26 @@
 
     <Button fx:id="showStorageMenu" text="Show storage" layoutX="160" layoutY="160"
             onAction="#showStorage"/>
+
+
+    <Label text="Reservations and Human Resources:" layoutX="45" layoutY="210"/>
+
+    <Button fx:id="showAddDoctorMenu" text="Add doctor" layoutX="45" layoutY="250"
+            onAction="#handleShowAddDoctorMenu"/>
+
+    <Button fx:id="DeleteDoctorMenu" text="Delete doctor" layoutX="160" layoutY="250"
+            onAction="#handleShowDeleteDoctorMenu"/>
+
+    <Button fx:id="showDoctors" text="Show Doctors" layoutX="45" layoutY="300"
+            onAction="#handleShowDoctorsRegister"/>
+
+    <Button fx:id="showReservationMenu" text="Make a reservation" layoutX="160" layoutY="300"
+            onAction="#handleShowReservationMenu"/>
+
+    <Button fx:id="deleteReservationMenu" text="Delete a reservation" layoutX="45" layoutY="350"
+            onAction="#handleDeleteReservation"/>
+
+    <Button fx:id="showReservations" text="Show reservations" layoutX="160" layoutY="350"
+            onAction="#handleShowReservations"/>
+
 </Pane>
