--- a/src/main/resources/Project/MaterialWindow.fxml
+++ b/src/main/resources/Project/MaterialWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane fx:controller="Project.MaterialController"
+<Pane fx:controller="Project.material.MaterialController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets top="15" right="25" bottom="15" left="25"/></padding>
     <Label text="Name:" layoutX="77" layoutY="30"/>
