--- a/src/main/resources/Project/StorageWindow.fxml
+++ b/src/main/resources/Project/StorageWindow.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.StorageController">
+<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.storage.StorageController">
     <padding><Insets bottom="15" left="25" right="25" top="15" /></padding>
 
     <Button fx:id="exitStorageButton" layoutX="205.0" layoutY="419.0" onAction="#exitStorage" text="Exit" />
