--- a/src/main/resources/Project/DoctorsRegisterWindow.fxml
+++ b/src/main/resources/Project/DoctorsRegisterWindow.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Project.DoctorsRegisterController"
-            prefHeight="400.0" prefWidth="600.0">
+<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.DoctorsRegisterController">
+    <padding><Insets bottom="15" left="25" right="25" top="15" /></padding>
 
-</AnchorPane>
+    <Button fx:id="exitDoctorsRegisterButton" layoutX="205.0" layoutY="419.0" onAction="#exitDoctorsRegister" text="Exit" />
+    <TableView fx:id="tableView" layoutX="26.0" layoutY="14.0">
+        <columns>
+            <TableColumn fx:id="colName" maxWidth="100.0" text="Name" />
+            <TableColumn fx:id="colSurname" maxWidth="80.0" text="Surname" />
+            <TableColumn fx:id="colSpeciality" maxWidth="80.0" text="Speciality" />
+            <TableColumn fx:id="colPhoneNumber" maxWidth="160" text="Phone Number" />
+            <TableColumn fx:id="colEmail" maxWidth="160" text="Email" />
+        </columns>
+    </TableView>
+</Pane>
