--- a/src/main/resources/Project/AddDoctorWindow.fxml
+++ b/src/main/resources/Project/AddDoctorWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.collections.FXCollections?>
 
 <?import Project.doctor.Speciality?>
-<Pane fx:controller="Project.AddDoctorController"
+<Pane fx:controller="Project.doctor.AddDoctorController"
       xmlns:fx="http://javafx.com/fxml">
     <padding><Insets top="15" right="25" bottom="15" left="25"/></padding>
     <Label text="Name" layoutX="51" layoutY="30"/>
