--- a/src/main/resources/Project/DoctorDeletionWindow.fxml
+++ b/src/main/resources/Project/DoctorDeletionWindow.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<Pane xmlns:fx="http://javafx.com/fxml" fx:controller="Project.DeleteDoctorController">
+<Pane xmlns:fx="http://javafx.com/fxml" fx:controller="Project.doctor.DeleteDoctorController">
     <padding><Insets top="15" right="25" bottom="15" left="25"/></padding>
     <Label text="Doctors key:" layoutX="60" layoutY="15"/>
     <TextField fx:id="textFieldKey" promptText="Enter doctors key" layoutX="25" layoutY="40"/>
