--- a/src/main/resources/Project/ReservationRegisterWindow.fxml
+++ b/src/main/resources/Project/ReservationRegisterWindow.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.ReservationRegisterController">
+<Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.ReservationsRegister.ReservationRegisterController">
     <padding><Insets bottom="15" left="25" right="25" top="15" /></padding>
 
     <Button fx:id="exitReservationRegister" layoutX="390" layoutY="419.0" onAction="#exitReservationRegister" text="Exit" />
