--- a/src/main/resources/Project/StorageWindow.fxml
+++ b/src/main/resources/Project/StorageWindow.fxml
@@ -7,7 +7,8 @@
 <Pane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.storage.StorageController">
     <padding><Insets bottom="15" left="25" right="25" top="15" /></padding>
 
-    <Button fx:id="exitStorageButton" layoutX="205.0" layoutY="419.0" onAction="#exitStorage" text="Exit" />
+    <Button fx:id="exitStorageButton" layoutX="180.0" layoutY="419.0" onAction="#exitStorage" text="Exit" />
+    <Button fx:id="exportStorageButton" layoutX="220.0" layoutY="419.0" onAction="#exportStorageButton" text="Export Storage to JSON" />
     <TableView fx:id="tableView" layoutX="26.0" layoutY="14.0">
         <columns>
             <TableColumn fx:id="colName" maxWidth="100.0" text="Name" />
